plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'eureca.capstone.project'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}


dependencies {
    // Lombok (컴파일 시 전용)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Spring Web (MVC + Tomcat)
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Spring Data JPA (Hibernate, 트랜잭션 포함)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // MySQL JDBC 드라이버
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Swagger/OpenAPI (springdoc-openapi)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-crypto'

    // Redis (Lettuce 기반)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.session:spring-session-data-redis'

    // JWT (JWT)
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Spring AI
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'

    // Mail 관련 의존성
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // OAuth 2.0 관련 의존성
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Elastic Search
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'
    testImplementation 'org.springframework.kafka:spring-kafka-test'

    // validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mysql'
    testImplementation 'org.testcontainers:testcontainers'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

ext {
    springAiVersion = "1.0.0"
    testcontainersVersion = "1.21.4"
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:$springAiVersion"
        mavenBom "org.testcontainers:testcontainers-bom:$testcontainersVersion"
    }
}

// clean 시 Q 클래스 디렉토리 삭제
clean {
    delete file('build/generated/sources/annotationProcessor/java/main')
}

tasks.named('bootJar') {
    mainClass.set('eureca.capstone.project.orchestrator.OrchestratorApplication')
}

tasks.named('compileJava') {
    // 컴파일 시 옵션 추가
    options.compilerArgs += ['-parameters'] // 메서드 파라미터 이름 유지
    options.annotationProcessorPath = configurations.annotationProcessor // Annotation Processor 경로 지정
}

tasks.named('test') {
    useJUnitPlatform()

    def sanitizedPath = (System.getenv('PATH') ?: '')
            .split(java.io.File.pathSeparator)
            .findAll { entry -> entry && !entry.startsWith("\\\\?\\") }
            .join(java.io.File.pathSeparator)

    if (sanitizedPath) {
        environment 'PATH', sanitizedPath
        environment 'Path', sanitizedPath
    }
}
